# OKTA-JIT-POC

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: app-ci.yml  drift.yml  infra-apply.yml  infra-destroy.yml  infra-plan.yml
app/: README.md
app/lambdas/janitor/: Dockerfile  handler.py  pyproject.toml
app/shared/: grants.py
app/shared/targets/: base.py  registry.py  s3.py  secrets_manager.py
app/streamlit/: Dockerfile  pyproject.toml
app/streamlit/src/: config.py  main.py
app/streamlit/src/lib/: checks.py  (+2 more)
app/tests/: conftest.py  test_grants.py  test_janitor.py  test_okta_client.py  test_targets_s3.py  test_targets_secrets_manager.py
documentation/: README.md  deployment-and-teardown.md  overview.md  quirks.md
infra/: README.md  identity.yaml  identity.yaml.example
infra/aws-app/janitor/: README.md  data.tf  ecr.tf  iam_roles.tf  lambda.tf  providers.tf  scheduler.tf  ssm.tf  variables.tf
infra/aws-base/: README.md  data.tf  dynamodb.tf  ecr.tf  identity_center.tf  providers.tf  s3_target.tf  secrets_manager_target.tf  versions.tf
infra/bootstrap/: README.md  cleanup.sh  data.tf  github_actions.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/okta/: README.md  apps.tf  data.tf  group_rules.tf  groups.tf  outputs.tf  providers.tf  signon_policies.tf  user_schema.tf  users.tf  variables.tf  versions.tf
infra/policies/: terraform.rego
scripts/: README.md  check-prereqs.sh  check_identity.py  cleanup.sh  empty_ecrs.sh  seed_janitor_bootstrap.sh  seed_streamlit_bootstrap.sh  setup.sh  setup_identity.py
(+57 files in other folders)
